--- a/recipes/style.css
+++ b/recipes/style.css
@@ -1,23 +1,58 @@
 h1 {
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    font-size: large;
+    font-size: xx-large;
     outline: auto;
     background-color: orange;
+    width: 50%;
+    margin: auto;
+    padding: 15px;
+    text-align: center
 }
 
 ul {background-color: black;
-color: white;}
+color: white;
+width: 50%;
+margin: auto;
+padding: 15px;
+font-size: large;
+}
 
-p{ background-color: lightpink;
+.para{ background-color: lightpink;
 color: darkred;
+display: block;
+margin: auto;
+width: 50%;
+border: dotted purple;
 }
 
 ol{
     background-color: gold;
     color: blue;
     text-align: center;
+    margin: auto;
+padding: 15px;
+font-size: large;
+width: 50%;
 }
 
 a {
     color: aliceblue;
+}
+
+h2 {
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-size: x-large;
+    outline: auto;
+    background-color: fuchsia;
+    width: 50%;
+    margin: auto;
+    padding: 15px;
+    text-align: center
+}
+
+img{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 25%;
 }
